# Fixtures

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  action.yml  ferrflow.json  renovate.json
.githooks/: install.sh  pre-commit  pre-push
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: new-fixture.yml
.github/workflows/: pr-title.yml  release.yml  renovate-rebase.yml  reusable.yml  scorecard.yml  security-scan.yml  test.yml  validate.yml
fixtures/definitions/: config-toml-format.toml  hooks-basic.toml  merge-commit-basic.toml  monorepo-mixed-bumps.toml  monorepo-output-grouping.toml  monorepo-partial-touch.toml  prerelease-alpha.toml  single-package-major.toml  single-package-minor.toml  single-package-no-releasable.toml  single-package-nothing.toml  single-package-patch.toml  tag-at-arbitrary-commit.toml
fixtures/examples/: calver-basic.json  calver-seq.json  calver-short.json  config-nested-path.json  depends-on-chain.json  depends-on-graph.json  edge-duplicate-tags.json  edge-empty-repo.json  edge-initial-release.json  edge-merge-commits.json  edge-no-versioned-files.json  edge-orphaned-tags.json  edge-recover-missed.json  floating-tags-basic.json  floating-tags-disabled.json  floating-tags-major-bump.json  floating-tags-monorepo.json  hooks-env-variables.json  hooks-execution-order.json  hooks-failure-aborts.json  hooks-per-package.json  (+20 more)
generator/: Cargo.toml
generator/src/: cli.rs  generate.rs  main.rs  rng.rs  tree.rs  types.rs  validate.rs
schema/: fixture.schema.json
scripts/: run-tests.sh
