[workspace]

[package]
name = "generate-fixtures"
version = "1.0.2"
edition = "2021"

[[bin]]
name = "generate-fixtures"
path = "src/main.rs"

[dependencies]
git2 = "0.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.0"
anyhow = "1"
chrono = "0.4"
rayon = "1"

[dev-dependencies]
tempfile = "3"
